<resources>
    <string name="app_name">ADB WiFi</string>
    <string name="widget_name">ADB WiFi widget</string>
    <string name="checking_root">Checking root access…</string>
    <string name="no_root">No root access.</string>
    <string name="root">Root access available.</string>
    <string name="about">Mark Peter Vargha\nvarghamarkpeter.hu\nvmp@varghamarkpeter.hu\nhttps://github.com/vargham/wadb/</string>
    <string name="wifi_adb_enabled">Wireless ADB enabled</string>
    <string name="wifi_adb_disabled">Wireless ADB disabled</string>
    <string name="on_boot_wifi_adb_enabled">On boot wireless ADB enabled</string>
    <string name="on_boot_wifi_adb_disabled">On boot wireless ADB disabled</string>
    <string name="widget_adb_disabled">WiFi ADB is disabled.</string>
    <string name="widget_tap_here">Tap here to enable.</string>
    <string name="widget_adb_enabled">WiFi ADB is enabled:</string>
    <string name="widget_working">Working…</string>
</resources>
